--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
+    <div class="pagina-inicial">
+        {% include 'galeria/partials/_header.html' %}
+        <main class="principal">
+            {% include 'galeria/partials/_side.html' %}
     {% block content %}{% endblock %}
+    {% include 'galeria/partials/_footer.html' %}
+    {% include 'galeria/partials/_side.html' %}
 </body>
 
 </html>
