--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -18,9 +18,10 @@
         {% include 'galeria/partials/_header.html' %}
         <main class="principal">
             {% include 'galeria/partials/_side.html' %}
-    {% block content %}{% endblock %}
-    {% include 'galeria/partials/_footer.html' %}
-    {% include 'galeria/partials/_side.html' %}
+            {% block content %}{% endblock %}
+            {% include 'galeria/partials/_footer.html' %}
+        </main>
+    </div>
 </body>
 
 </html>
